# RAG-Using-Airbnb-reviews-to-augment-touristic-recommendation-huggingface

./: .gitignore  README.md  airbnb_embeddings.db  main.py  pyproject.toml  rag_airbnb_main.py  requirements.txt
.history/: .env_20251024142838  .env_20251024142900  .env_20251024142902  .env_20251024142918  .env_20251024144437  .env_20251024144440  .env_20251024154155  .env_20251024165948  .env_20251025154552  .env_20251025160816  .env_20251025161023  README_20251026122302.md  README_20251026122307.md  README_20251026122322.md  README_20251026122325.md  README_20251026122335.md  key_test_20251024154503.py  key_test_20251024154506.py  key_test_20251024154508.py  main_20251024142606.py  main_20251024164530.py  main_20251024164545.py  main_20251024164548.py  main_20251024165911.py  main_20251024170004.py  test1_20251024163855.py  test_20251024154916.py  test_20251024154932.py  test_20251024155123.py  test_20251024155141.py  test_20251024155522.py  test_20251024155529.py  test_20251024155939.py  test_20251024155956.py  test_20251024162343.py  test_20251024162346.py  test_20251024162348.py  test_20251024162439.py  test_db_connection_20251024164820.py  test_db_connection_20251024164842.py  (+9 more)
data_exploration_analysis/: data_quality_report.py  preprocess_and_clean_data.py
scripts/: build_index.py  get_table_schema.py  interactive_query.py  rag_airbnb_get_table_schema.py  rag_airbnb_test_db_connection.py  test_db_connection.py
src/: database.py  embedding.py  faiss_index.py  llm.py  rag_airbnb_config.py  rag_airbnb_database.py  rag_airbnb_embedding.py  rag_airbnb_faiss_index.py  (+1 more)
(+11 files in other folders)
